# youtube-scraper

./: LICENSE  README.md  pyproject.toml  scraper.py  trending.csv  trending.html
